[feature]:creating wishlist
