# internal/entity/responses.go
@@ -5,3 +5,10 @@ type FailureResponse struct {
 	Details string `json:"details" example:"Message error for developers"`
 	Status  string `json:"status" example:"failure"`
 }
+
+// SuccessResponse is the basic form of an informational reply upon success
+type SuccessResponse struct {
+	Success bool   `json:"success" description:"response status" example:"true"`
+	Message string `json:"message" description:"response information" example:"ok"`
+	Details string `json:"details,omitempty" description:"optional details" example:"operation completed"`
+}
